@startuml

title __OBJECTDETECTOR's Class Diagram__\n

  namespace jp.oist.abcvlib.camera {
    namespace objectdetector {
      class jp.oist.abcvlib.camera.objectdetector.ObjectDetectorProcessor {
          {static} - TAG : String
          - detector : ObjectDetector
          + ObjectDetectorProcessor()
          + stop()
          # detectInImage()
          # onFailure()
          # onSuccess()
      }
    }
  }
  

  namespace jp.oist.abcvlib.camera {
    namespace objectdetector {
      class jp.oist.abcvlib.camera.objectdetector.ObjectGraphic {
          {static} - COLORS : int[][]
          {static} - LABEL_FORMAT : String
          {static} - NUM_COLORS : int
          {static} - STROKE_WIDTH : float
          {static} - TEXT_SIZE : float
          - boxPaints : Paint[]
          - labelPaints : Paint[]
          - object : DetectedObject
          - textPaints : Paint[]
          + draw()
          ~ ObjectGraphic()
      }
    }
  }
  

  jp.oist.abcvlib.camera.objectdetector.ObjectDetectorProcessor -up-|> jp.oist.abcvlib.camera.VisionProcessorBase
  jp.oist.abcvlib.camera.objectdetector.ObjectGraphic -up-|> jp.oist.abcvlib.camera.GraphicOverlay.Graphic


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
